--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,40 +1,39 @@
-<!doctype html>
+﻿<!doctype html>
 <html lang="en">
 <head>
-<meta charset="utf-8">
-<title>todo</title>
-<link rel="stylesheet"
-	href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.3/themes/smoothness/jquery-ui.css">
-<script
-	src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-<script
-	src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.3/jquery-ui.min.js"></script>
+    <meta charset="utf-8">
+    <title>todo</title>
+    <link rel="stylesheet"
+          href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.3/themes/smoothness/jquery-ui.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.3/jquery-ui.min.js"></script>
 
-<link rel="stylesheet" href="css/todos.css">
-<script src="js/todos.js"></script>
+    <link rel="stylesheet" href="css/todos.css">
+    <script src="js/todos.js"></script>
 
 </head>
 <body>
 
-	<div id="container">
-		<p>
-			<span><strong>Select REST service to use:</strong></span><br>
-			<input type="radio" name="uriradio" value="webapi/todos">cloud data storage (persistent). URI: webapi/todos<br>
-			<input type="radio" name="uriradio" value="webapi/memtodos" checked="checked">in-memory data storage (temporary). URI: webapi/memtodos
-		</p>
-	
-		<p>
-			<span>Click on item to select if for UPDATE or DELETE.<br>
-			Mutiselect items by CTRL+CLICK.</span>
-		</p>
+    <div id="container">
+        <p>
+            <span><strong>Select REST service to use:</strong></span><br>
+            <input type="radio" name="uriradio" value="webapi/todos">cloud data storage (persistent). URI: webapi/todos<br>
+            <input type="radio" name="uriradio" value="webapi/memtodos" checked="checked">in-memory data storage (temporary). URI: webapi/memtodos
+        </p>
 
-		<input type="text" id="text-input"></input>
-		<button type="button" id="create-button">create</button>
-		<button type="button" id="update-button">update</button>
-		<button type="button" id="delete-button">delete</button>
-		<ul id="task-list">
-		</ul>
-	</div>
+        <p>
+            <span>
+                Click on item to select if for UPDATE or DELETE.<br>
+                Mutiselect items by CTRL+CLICK.
+            </span>
+        </p>
+
+        <input type="text" id="text-input"></input>
+        <button type="button" id="create-button">create</button>
+        <button type="button" id="update-button">update</button>
+        <button type="button" id="delete-button">delete</button>
+        <ul id="task-list"></ul>
+    </div>
 
 </body>
 </html>
