Adjusted path, romeved azuredeployment

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -15,6 +15,11 @@
 <body>
 
     <div id="container">
+    	<p>
+    		This is a student project for RESTful API demonstration purposes.<br>
+    		Git repository: <a herf="https://github.com/freeuni-sdp/todo-core">https://github.com/freeuni-sdp/todo-core</a>
+    	</p>
+    
         <p>
             <span><strong>Select REST service to use:</strong></span><br>
             <input type="radio" name="uriradio" value="webapi/todos">cloud data storage (persistent). URI: webapi/todos<br>
