Fixed href tag.

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -17,7 +17,7 @@
     <div id="container">
     	<p>
     		This is a student project for RESTful API demonstration purposes.<br>
-    		Git repository: <a herf="https://github.com/freeuni-sdp/todo-core">https://github.com/freeuni-sdp/todo-core</a>
+    		Git repository: <a href="https://github.com/freeuni-sdp/todo-core">https://github.com/freeuni-sdp/todo-core</a>
     	</p>
     
         <p>
