Added jetty runner mvn plugin

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -33,7 +33,7 @@
             </span>
         </p>
 
-        <input type="text" id="text-input"></input>
+        <input type="text" id="text-input">
         <button type="button" id="create-button">create</button>
         <button type="button" id="update-button">update</button>
         <button type="button" id="delete-button">delete</button>
